[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/GUI/DeathMenu/DeathMenu.gd" type="Script" id=1]
[ext_resource path="res://src/UI/PixelTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/UI/HUD/HUD_Counters/Counter.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/HUD/HUD_Counters/ScoreCounter/ScoreCounter.gd" type="Script" id=4]
[ext_resource path="res://src/UI/HUD/HUD_Counters/HighScoreCounter.tscn" type="PackedScene" id=5]

[node name="DeathMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 457.0, 566.0 ]
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.00784314, 0.168627, 0.698039 )

[node name="CenterContainer" type="CenterContainer" parent="."]
process_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
offset_left = 362.0
offset_top = 155.0
offset_right = 662.0
offset_bottom = 444.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
offset_right = 300.0
offset_bottom = 37.0
text = "GAME OVER!"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
offset_top = 47.0
offset_right = 300.0
offset_bottom = 84.0
alignment = 1

[node name="ScoreCounter" parent="CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
offset_left = 110.0
offset_right = 190.0
size_flags_horizontal = 6
script = ExtResource( 4 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
offset_top = 94.0
offset_right = 300.0
offset_bottom = 131.0
alignment = 1

[node name="HighScoreCounter" parent="CenterContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 5 )]
offset_left = 104.0
offset_right = 196.0

[node name="Control3" type="Control" parent="CenterContainer/VBoxContainer"]
offset_top = 141.0
offset_right = 300.0
offset_bottom = 141.0
pivot_offset = Vector2( -659, -126 )

[node name="TryBtn" type="Button" parent="CenterContainer/VBoxContainer"]
offset_top = 151.0
offset_right = 300.0
offset_bottom = 215.0
custom_minimum_size = Vector2( 300, 64 )
text = "Try Again"

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
offset_top = 225.0
offset_right = 300.0
offset_bottom = 289.0
custom_minimum_size = Vector2( 0, 64 )
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/TryBtn" to="." method="_on_TryBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
